<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_login"
    tools:context=".login.Login">

    <ImageView
        android:id="@+id/imageBack"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="22dp"
        android:contentDescription="@string/componentes"
        app:srcCompat="@drawable/app_cuadro"
        tools:layout_editor_absoluteX="22dp"
        tools:layout_editor_absoluteY="58dp" />

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:contentDescription="@string/componentes"
        app:srcCompat="@drawable/app_logo"/>

    <EditText
        android:id="@+id/editUser"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="220dp"
        android:background="@drawable/app_campos"
        android:drawableLeft="@drawable/ic_user_grey"
        android:drawablePadding="10dp"
        android:fontFamily="sans-serif-condensed-light"
        android:hint="@string/login_user"
        android:inputType="textPersonName"
        android:paddingLeft="15dp"
        android:text="@string/login_user"
        android:textColorHint="#505050"
        android:textColor="@color/colorTextHint"
        android:textSize="20sp"
        tools:ignore="Autofill,RtlHardcoded,RtlSymmetry"/>

    <EditText
        android:id="@+id/editPass"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="275dp"
        android:background="@drawable/app_campos"
        android:drawableLeft="@drawable/ic_pass_grey"
        android:drawablePadding="10dp"
        android:fontFamily="sans-serif-condensed-light"
        android:hint="@string/login_pass"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:text="@string/login_pass"
        android:textColorHint="#505050"
        android:textColor="@color/colorTextHint"
        android:textSize="20sp"
        tools:ignore="Autofill,RtlHardcoded,RtlSymmetry"/>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="150dp"
        android:background="@drawable/app_boton"
        android:contentDescription="@string/login_iniciar"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/login_iniciar"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/textHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/login_ayuda"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="133dp"
        tools:layout_editor_absoluteY="549dp"/>

    <TextView
        android:id="@+id/textVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="55dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/login_version"
        android:textColor="@color/colorTextHint"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="162dp"
        tools:layout_editor_absoluteY="597dp"/>

</RelativeLayout>